--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -98,7 +98,7 @@ $('document').ready(function(){
 <!--***************ARIA MARKER 'BANNER'***************-->
 <header role="banner">
 
-  <!--><div id="header-left">
+  <!--<div id="header-left">
     <div id="fill-logo"><a href="/"><img src="/img/fill-logo.png" alt="fill"></a></div>
     <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
   </div>
@@ -111,13 +111,13 @@ $('document').ready(function(){
        to make an ILL request (we need to know who is making the request :-)
        It doesn't have to be *here*, but it has to be somewhere....
     -->
-        <!--<div id="username"><TMPL_VAR name="username"></div>
+        <div id="username"><TMPL_VAR name="username"></div>
         <p><TMPL_VAR name="library"></p>
         <p style="display:none"><TMPL_VAR name="lid"></p>
 
 	<input id="incrFont" class="public-style" type="button" value="+A" /><input id="decrFont" class="public-style" type="button" value="-A" />
     </div>
-  </div>-->
+  </div>
 
 </header>
     
