--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -98,7 +98,7 @@ $('document').ready(function(){
 <!--***************ARIA MARKER 'BANNER'***************-->
 <header role="banner">
 
-  <!--<div id="header-left">
+  <div id="header-left">
     <div id="fill-logo"><a href="/"><img src="/img/fill-logo.png" alt="fill"></a></div>
     <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
   </div>
