--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -105,7 +105,7 @@ $('document').ready(function(){
 
   <div id="header-right">
     <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button" class="public-style">log out</a></div>
-    <div id="patron-info">-->
+    <div id="patron-info">
   <!-- The id="username" div is necessary: the username gets extracted (in 
        fILL_client-public-x.y.js), and passed to the code that allows the patron 
        to make an ILL request (we need to know who is making the request :-)
