removed div from search

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -112,7 +112,6 @@
 
 <!-- from header.tmpl -->
 
-<div id="container">
 
   <!--***************ARIA MARKER 'BANNER'***************-->
   <header role="banner">
@@ -138,7 +137,7 @@
       </div>
     </div>
 
-  </header>
+  </header>-->
   
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
   <nav role="navigation" id="pub-nav-primary">
@@ -257,7 +256,7 @@
   <div id="termlist"></div>
 </div>
 
-</div> <!-- container -->
+
 <TMPL_INCLUDE NAME="footer.tmpl">
 
 </body>
