added indentifying markup

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -95,7 +95,7 @@ $('document').ready(function(){
 <div id="container">
 <!--header template from public folder-->
 
-<!--***************ARIA MARKER 'BANNER'***************-->
+<!--***************ARIA MARKER 'BANNER'-header.tmpl-***************-->
 <header role="banner">
 
   <div id="header-left">
