--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -112,8 +112,9 @@
 
 <!-- from header.tmpl -->
 
+<div id="container"><!--closes in footer.tmp-->
 
-  <!--***************ARIA MARKER 'BANNER'***************-->
+  <!--***************ARIA MARKER 'BANNER'-search.tmpl-***************-->
   <header role="banner">
 
     <div id="header-left">
@@ -137,7 +138,7 @@
       </div>
     </div>
 
-  </header>-->
+  </header>
   
   <!--***************ARIA MARKER 'NAVIGATION'***************-->
   <nav role="navigation" id="pub-nav-primary">
