new id 'content'

--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -84,7 +84,8 @@ $('document').ready(function(){
 });
 
 </script>
-     
+<div id="content">  
+
         <div id="waitDiv">
           Loading... <img src="/wait.gif">
         </div>
@@ -94,5 +95,7 @@ $('document').ready(function(){
           <br />
         <div id="mylistDiv"></div>
   </div>
+
+</div><!--div id content-->
 
 <TMPL_INCLUDE NAME="footer.tmpl">
