--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -68,7 +68,7 @@ $('document').ready(function(){
 }*/
 
 </style>
-<div class="clear">
+<div id="content">
 
       <h2>My Account</h2>
       <table id="fill-table">
