--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -4,6 +4,7 @@
     set_primary_tab("menu_faq");
 </script>
 
+<div id="content">
 
 <div id="main-info-left" class="tone-box">
 <h2>FAQs</h2>
@@ -48,6 +49,7 @@
 		<img src="/img/fill-faq.png"></div>
 	</div>
 
+</div><!--div id content-->
 
 <!--
       <p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
