--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -3,7 +3,7 @@
 <script type="text/javascript">
     set_primary_tab("menu_help");
 </script>
-<div id="container">
+<div id="content">
 <!--
   <div id="aside-img-left">
       <img src='/img/fill-help.jpg' alt="Three children sitting on a couch in the library reading books"/>
@@ -20,7 +20,7 @@
 	</object>
   <p>Or click here to <a href="/patrons-searching-tutorial.pdf">download PDF</a>[285 KB]</p>
 
-</div><!--container div-->
+</div><!--content div-->
 
 <!--
       <p class="debuginfo">Logged in as [<TMPL_VAR NAME="username">]</p>
