--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -819,7 +819,9 @@ and (max-width : 65em)
     	height: auto;
 		max-width: 100%;
 		border: 0px;
-    	margin: auto;
+    	margin-left: auto;
+    	margin-right: auto;
+    	display: block;
     }
 
     button {
