fix for FAQ page!
extra div removed

--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -46,7 +46,7 @@
 </div><!--main-info-left-->
 
 	<div id="aside-img-right">
-		<img src="/img/fill-faq.png"></div>
+		<img src="/img/fill-faq.png">
 	</div>
 
 </div><!--div id content-->
