--- a/htdocs/css/themes-public-default.css
+++ b/htdocs/css/themes-public-default.css
@@ -23,7 +23,6 @@ html, body {
 
 #container {
     background-color: #f3f3f3;
-    border: red dashed 1px;
 }
 
 h2 {
@@ -68,13 +67,13 @@ nav li a.current_tab {
 }
 
 #search {
-    border-bottom: 5px solid #b3b3b3;
+    border-bottom: 5px solid #c3c3c3;
 }
 
 #progress_empty {
     background-color:#f3f3f3;
     border:1px solid #b3b3b3;
-}
+} 
 #progress_filler {
     background-color:#b3b3b3;
 }
@@ -208,7 +207,7 @@ button {
 }
 .details {
     border-top: 1px solid #b3b3b3;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid #fff;
     background-color: #f3f3f3;
 }
 .secondary_info {
