Revert "fix for mobile img style"
This reverts commit 2249aa1d8feeb37f31fc8c743a30b9a544454075.

Conflicts:
	htdocs/css/fILL-public-accessible.1.1.css

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -340,7 +340,11 @@ nav li a
 .lighter-box {
 }
 
-.covers {
+#covers {
+
+}/*more in mobile styles*/
+
+.covers6 {
     height: 180px;
     width: 120px;
     margin-top: 2em;
@@ -819,9 +823,14 @@ and (max-width : 65em)
     	height: auto;
 		max-width: 100%;
 		border: 0px;
-    	margin-left: 0 auto;
-    	margin-right: 0 auto;
+    	margin-left: auto;
+    	margin-right: auto;
+    	display: block;
     }
+    
+    #covers {
+    	display: inline;
+	}
 
     button {
 	font-size: 1.2em;
