--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -197,6 +197,7 @@
         <!-- The class="coverlink" is used to drive the click-the-image-to-search code;
 	     The keywords to search for are taken from the "title" attribute.
 	-->
+  <div id="covers"
         <a href="#" class="coverlink" title="Craig Davidson, Cataract City" >
     <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-cataractcity.jpg">
   </a>
@@ -209,6 +210,7 @@
 <a href="#" class="coverlink" title="Dennis Bock, Going Home Again">
     <img class="covers4" alt="Giller Prize shortlist 2013" src="/img/covers/gp13-homeagain.jpg">
   </a>
+  </div>
        <p><strong>Giller Prize 2013 shortlist</strong></p> 
       </div>
 
