cover specificity fix

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -829,6 +829,10 @@ and (max-width : 65em)
     }
 
     #covers {
+    	height: auto;
+		max-width: 100%;
+		border: 0px;
+    	margin-right: .3em;
     	display: inline;
 	}
 
