--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -828,7 +828,7 @@ and (max-width : 65em)
     	display: block;
     }
 
-    #covers {
+    #covers img {
     	height: auto;
 		max-width: 100%;
 		border: 0px;
