removed header dev text

--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -100,7 +100,7 @@ $('document').ready(function(){
 
   <div id="header-left">
     <div id="fill-logo"><a href="/"><img src="/img/fill-logo.png" alt="fill"></a></div>
-    <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.[header]</p></div>
+    <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
   </div>
 
   <div id="header-right">
@@ -140,7 +140,7 @@ $('document').ready(function(){
     <form id="searchForm" action="/cgi-bin/public.cgi" method="post" name="search">
       <!-- The <input id="query"...> also needs name="query"; it is used by public.pm's 
 	search_process to feed the *real* search page -->
-      <input id="query" type="text" name="query" size="50px" placeholder="Search" value="<TMPL_VAR name='query'>">
+      <input id="query" type="text" name="query" placeholder="Search" value="<TMPL_VAR name='query'>">
       <input id="rm" type="hidden" name="rm" value="search_form">
       <input type="submit" value="Go" class="public-style">
     </form>
