--- a/templates/public/logged_out.tmpl
+++ b/templates/public/logged_out.tmpl
@@ -2,7 +2,7 @@
 
 <div class="clear">
 
-	<div id="container">
+	<div id="content">
 		<h1>Logged out</h1>
 	<p style="display:none">Logged in as [<TMPL_VAR NAME="username">]</p>
 	<p style="display:none">Session id [<TMPL_VAR NAME="sessionid">]</p>
