--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -644,7 +644,7 @@ div.termtitle {
 	clear: both;
 	height: .5em;
 	width: 100%;
-	margin: .5em 0em;
+	margin-top: .5em;
 	padding: 0;
 	border: 0;
 }
