--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -68,7 +68,8 @@ $('document').ready(function(){
 }*/
 
 </style>
-<div id="content">
+
+<div id="content clear">
 
       <h2>My Account</h2>
       <table id="fill-table">
