lighter side border

--- a/htdocs/css/themes-public-default.css
+++ b/htdocs/css/themes-public-default.css
@@ -23,8 +23,8 @@ html, body {
 
 #container {
     background-color: #f3f3f3;
-    border-left: 2px solid #a3a3a3;
-    border-right: 2px solid #a3a3a3;
+    border-left: 2px solid #b3b3b3;
+    border-right: 2px solid #b3b3b3;
 }
 
 h2 {
