help page clear

--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -3,6 +3,9 @@
 <script type="text/javascript">
     set_primary_tab("menu_help");
 </script>
+
+<div id="clear"></div>
+
 <div id="content">
 <!--
   <div id="aside-img-left">
