--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -68,7 +68,7 @@ h3 {
 #container
 {
 	margin: auto;
-	padding: .5em;
+	padding: 0em .5em;
 	width: 85%;
 	height: auto;
 	clear: both;  /* start fresh with floatiness within the container */
