fixed clear issue

--- a/templates/public/myaccount.tmpl
+++ b/templates/public/myaccount.tmpl
@@ -68,8 +68,8 @@ $('document').ready(function(){
 }*/
 
 </style>
-
-<div id="content clear">
+<div id="clear">
+<div id="content">
 
       <h2>My Account</h2>
       <table id="fill-table">
