--- a/htdocs/css/fILL-library-accessible.1.0.css
+++ b/htdocs/css/fILL-library-accessible.1.0.css
@@ -2,6 +2,23 @@
 
 /***---Start of new library client side CSS---**/
 
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-size: 100%;  /* permits better scaling (all other font sizes in em) */
+}
+
+#container
+{
+  margin: auto;
+  padding: 0em .5em;
+  width: 85%;
+  height: auto;
+  clear: both;  /* start fresh with floatiness within the container */
+}
+
 #header.header-library {
 }
 
