minor text tweak

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -51,7 +51,7 @@ $('document').ready(function() {
 <div id="main-right" class="tone-box" role="complimentary">
   <h2>Updates</h2>
   <hr>
-  <strong>Monday 8th December Release notes</strong><span style="color:red;">new!</span>
+  <strong>Monday 8th December Release notes</strong><span style="color:red;"> (new!)</span>
   <p>New functionality: Advanced Search</p>
   <p>Based on feedback from the library community, we've implemented an 'Advanced search' which will help you to build the proper query for title/author/subject/series searches.</p>
   <p>On the Search page ("Borrowing" -> "Search"), click on the 'Advanced' button at the end of the search box.  This will display the advanced fields.  Enter your information and click the 'Search' button; the system will turn your title/author/subject/series phrases into the required format and perform the search.</p>
