breaks on advanced search

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -219,13 +219,13 @@ $('document').ready(function(){
 	<div class="tone-box">
 
 	  <label for="adv_title">Title</label>
-    <input id="adv_title" type="text"/>
+    <input id="adv_title" type="text"/><br>
 	  
     <label for="adv_author">Author</label>
-    <input id="adv_author" type="text"/>
+    <input id="adv_author" type="text"/><br>
 	  
     <label for="adv_subject">Subject</label>
-    <input id="adv_subject" type="text"/>
+    <input id="adv_subject" type="text"/><br>
 	  
     <label for="adv_series">Series</label>
     <input id="adv_series" type="text"/>
