tweak to login field

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -218,16 +218,16 @@ $('document').ready(function(){
       <div id="advanced_search" style="display: none">
 	<div class="tone-box">
 
-	  <label for="adv_title">Title</label>
+	  <label for="adv_title">Title: </label>
     <input id="adv_title" type="text"/><br>
 	  
-    <label for="adv_author">Author</label>
+    <label for="adv_author">Author: </label>
     <input id="adv_author" type="text"/><br>
 	  
-    <label for="adv_subject">Subject</label>
+    <label for="adv_subject">Subject: </label>
     <input id="adv_subject" type="text"/><br>
 	  
-    <label for="adv_series">Series</label>
+    <label for="adv_series">Series: </label>
     <input id="adv_series" type="text"/>
 
 	</div>
