fix for iOS autocapitalize

--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -24,8 +24,8 @@ $('document').ready(function(){
   	</div>
 	  <fieldset>
             <label for="authen_username">User Name</label>
-            <input type="text" value="" name="authen_username" tabindex="1" id="authen_loginfield"><br>
-            
+            <input type="text" value="" autocaptalize="off" autoname="authen_username" tabindex="1" id="authen_loginfield"><br>
+
             <label for="authen_password">Password</label>
             <input type="password" name="authen_password" tabindex="2" id="authen_passwordfield"><br>
 
