--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -17,6 +17,8 @@
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css">
 <link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
+<link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"> 
+
 
 <link rel="stylesheet" type="text/css" href="/plugins/jquery-ui-1.11.1/jquery-ui.css">
 
