added search help info to advanced

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -232,6 +232,19 @@ $('document').ready(function(){
     <label for="adv_series">Series: </label>
     <input id="adv_series" type="text"/>
 
+  <h3>Search help</h3>
+   <p>fILL does a general keyword search by default.</p>
+  
+   <p><strong>Specific title:</strong> tti="The case for mars"</p>
+   <p><strong>Specific author:</strong> tau="Zubrin, Robert"</p>
+   <p><strong>Specific subject:</strong> tsu="mars planet"</p>
+   <p><strong>Series:</strong> tseries="fear street"</p>
+
+   <p>You can combine these using the connectors AND, OR, NOT:</p>
+   <p>tau="david drake" and au="eric flint"</p>
+   <p>tti="cooking" and su="solar"</p>
+   <p>tti="cooking" not su="microwave"");</p>
+  
 	</div>
       </div>
       <input id="button" type="submit" value="Search" class="library-style" />
