give reason for declining a patron request

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -799,6 +799,40 @@ div.login label, div.login input {
 	padding: 1em;
 }
 
+/* action button styles for data table buttons */
+input[type="button"].action-button {
+    margin: .3em;
+    padding: .3em .6em;
+    font-size: .8em;
+    width: auto;
+    border: 0;
+    border-radius:5px;
+}
+input[type="button"]:hover.action-button {
+    margin: .3em;
+    padding: .3em .6em;
+    font-size: .8em;
+    width: auto;
+    border: 0;
+    border-radius:5px;
+}
+input[type="button"].action-button-highlighted {
+    margin: .3em;
+    padding: .3em .6em;
+    font-size: .8em;
+    width: auto;
+    border: 0;
+    border-radius:5px;
+}
+input[type="button"]:hover.action-button-highlighted {
+    margin: .3em;
+    padding: .3em .6em;
+    font-size: .8em;
+    width: auto;
+    border: 0;
+    border-radius:5px;
+}
+
 /*------------------------------------------------------*/
 /* from Ohio Web Library */
 #progress_empty {
