--- a/templates/public/current.tmpl
+++ b/templates/public/current.tmpl
@@ -46,7 +46,6 @@ $('document').ready(function(){
 
     });
 
-
     $.getJSON('/cgi-bin/get-patron-requests.cgi', {pid: <TMPL_VAR name="pid">, lid: <TMPL_VAR name="lid">},
             function(data){
                 build_table(data);
@@ -77,6 +76,7 @@ $('document').ready(function(){
             // hidden 'cid' column (which is necessary for the detail drill-down):
             $('#datatable_borrowing').width("100%");
 	});
+
 
 
 //    $('#datatable_borrowing td.control').live( 'click', function () {        // deprecated in jquery 1.7
@@ -116,20 +116,8 @@ $('document').ready(function(){
         </div>
 
 	<div id="myDiv">
-          <h2>Current borrowing</h2>
-          <br />
-        <div class="dataTable_wrapper">
-
-        	<table id="datatable_borrowing" class="display">
-        	  <thead>
-        	    <tr>
-        	      <th></th><th>cid</th><th>Title</th><th>Author</th><th>Status</th><th>Details</th><th>Status Updated</th><th>Action</th>
-        	    </tr>
-        	  </thead>
-        	  <tbody>
-        	  </tbody>
-        	</table>
-      </div>
+	  <div id="mylistDiv"></div>
+	</div>
 </div>
 </div>
 
