--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -24,9 +24,9 @@ $('document').ready(function(){
         <fieldset name="login">
         <legend>Login</legend>
           <label for="authen_username">User Name</label>
-          <input type="text" value="" size="20" name="authen_username" tabindex="1" id="authen_loginfield" /><br>
+          <input type="text" value="" autocapitalize="off" name="authen_username" tabindex="1" id="authen_loginfield" /><br>
           <label for="authen_password">Password </label>
-          <input type="password" size="20" name="authen_password" tabindex="2" id="authen_passwordfield" /><br>
+          <input type="password" name="authen_password" tabindex="2" id="authen_passwordfield" /><br>
         </fieldset>
         <fieldset>
           <input type="submit" class="button-left public-style" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
