login legend test

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -19,10 +19,10 @@ $('document').ready(function(){
     <div class="login">
       <div class="login-content">
         <div class="login-header">
-          <span class="login-header-title">Log in to fILL</span>
+            <legend>Login</legend>
+          <!--<span class="login-header-title">Log in to fILL</span>-->
         </div>
         <fieldset name="login">
-        <legend>Login</legend>
           <label for="authen_username">User Name</label>
           <input type="text" value="" autocapitalize="off" name="authen_username" tabindex="1" id="authen_loginfield" /><br>
           <label for="authen_password">Password </label>
