login box dev test 2

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -17,7 +17,7 @@ $('document').ready(function(){
 
   <form action="/cgi-bin/public.cgi" method="post" name="loginform">
     <div class="login">
-      
+      <div class="login-content tone-box">
 
           <div class="login-header">
               <legend>Login</legend>
@@ -34,7 +34,7 @@ $('document').ready(function(){
           <input type="submit" class="button-left public-style" value="Sign In" name="authen_loginbutton" tabindex="4" id="authen_loginbutton">
           <input type="checkbox" value="1" name="authen_rememberuser" tabindex="3" id="authen_rememberuserfield"><span>Remember User Name</span><br>
         </fieldset>
-     
+      </div>
 
       <div class="login-footer">
         <p>Don&rsquo;t have an account?</p>
