login tweak cont 3

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -688,7 +688,7 @@ div.termtitle {
 }
 
 .login-header {
-  height: 3em;
+  height: ;
   padding: .5em 0em 0em 1em;
   font-size: 2em;
   margin-top: 1em;
