padding for login header fix

--- a/htdocs/css/fILL-public-accessible.1.1.css
+++ b/htdocs/css/fILL-public-accessible.1.1.css
@@ -689,7 +689,7 @@ div.termtitle {
 
 .login-header {
   height: ;
-  padding: .5em 0em 0em 1em;
+  padding: .5em 1em;
   font-size: 2em;
   margin-top: 1em;
 }
