style sheet test in search

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -18,10 +18,11 @@
   </script>
 <![endif]-->
 
-  <link type"text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
-  <link type"text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css">
-  <link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css">
-  <link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
+<link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
+<link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css">
+<link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
+<link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"> 
+  
   <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/js/pz2.js"></script>
   <script type="text/javascript" src="/js/fILL_client-public-1.9.js"></script>
