--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -22,7 +22,11 @@
 <link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css">
 <link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
 <link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"> 
-  
+
+<link rel="stylesheet" type="text/css" href="/plugins/jquery-ui-1.11.1/jquery-ui.css">
+<link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/media/css/jquery.dataTables.css">
+<link rel="stylesheet" type="text/css" href="/plugins/DataTables-1.10.2/extensions/TableTools/css/dataTables.tableTools.css">
+
   <script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
   <script type="text/javascript" src="/js/pz2.js"></script>
   <script type="text/javascript" src="/js/fILL_client-public-1.9.js"></script>
