--- a/htdocs/css/fILL-media.1.0.css
+++ b/htdocs/css/fILL-media.1.0.css
@@ -10,9 +10,10 @@ and (max-width : 65em)
 
     #container
     {
-	margin:;
+	margin: none;
 	padding: .5em;
 	width: 100%;
+    max-width: 600px;
 	height: auto;
 	clear: both;  /* start fresh with floatiness within the container */
     }
