--- a/htdocs/css/fILL-media.1.0.css
+++ b/htdocs/css/fILL-media.1.0.css
@@ -13,7 +13,7 @@ and (max-width : 65em)
 	margin: none;
 	padding: .5em;
 	width: 100%;
-    max-width: 600px;
+    max-width: 65em;
 	height: auto;
 	clear: both;  /* start fresh with floatiness within the container */
     }
