test with aside included

--- a/htdocs/css/fILL-media.1.0.css
+++ b/htdocs/css/fILL-media.1.0.css
@@ -102,6 +102,7 @@ and (max-width : 65em)
 	margin: auto;
 	display: block;
   	padding: 1em; 
+    max-width: inherit;
     }
     
     #main-info-left
