--- a/templates/public/faq.tmpl
+++ b/templates/public/faq.tmpl
@@ -6,19 +6,9 @@
 
 <div id="content">
 
-<div id="main-info-left" class="tone-box">
+<div id="main-info-left" class="tone-box" role="main">
 <h2>FAQs</h2>
-<!--<ul>
-	<li><a href="#q1"><h3>How long does it take to get something delivered?</h3></a></li>
-	<li><a href="#q2"><h3>Where does the requested item come from?</h3></a></li>
-	<li><a href="#q3"><h3>Why can&rsquo;t it just get sent to my home?</h3></a></li>
-	<li><a href="#q4"><h3>Why is it called fILL?</h3></a></li>
-	<li><a href="#q5"><h3>Can I renew my items?</h3></a></li>
-	<li><a href="#q6"><h3>How many items can I request at one time?</h3></a></li>
-	<li><a href="#q7"><h3>What happens if the item I want is already on loan?</h3></a></li>
-	<li><a href="#q8"><h3>Do I pay late fines at my local public library or to library the item came from</h3></a></li>
-</ul>
-<hr><br>-->
+
 <h3>How long does it take to get something delivered?</h3>
 <p>Typically it takes between a week and two weeks for an item to be delivered. Every request is unique and items with limited copies and those already on loan may take longer.</p>
 
@@ -46,7 +36,7 @@
 </div><!--main-info-left-->
 
 <div id="aside-img-right" role="complimentary">
-  <img src="/img/fill-faq.png" alt="Overlapping question marks"></div>
+  <img src="/img/fill-faq.png" alt="Overlapping question marks">
 </div>
 
 </div><!--div id content-->
