added missing div id content

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -177,6 +177,8 @@
 </div> <!-- search-container -->
 
 <!--***************ARIA MARKER 'MAIN'***************-->
+<div id="content">
+
 <main id="main" class="tone-box" role="main">
 
 <!-- Begin content -->
@@ -264,6 +266,7 @@
   <div id="termlist"></div>
 </div>
 
+</div><!--div id content-->
 
 <TMPL_INCLUDE NAME="footer.tmpl">
 
