--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -4,7 +4,7 @@
     set_primary_tab("menu_contact");
 </script>
 
-
+<div id="content">
 	<div id="main-info-left" class="tone-box" role="main">
 	    <p>If you require additional help requesting an item through fILL please visit or contact your local public library.</p>
 			<h3><TMPL_VAR name="library"></h3>
@@ -23,5 +23,7 @@
 		      <p class="note">Image care of <a href="https://www.flickr.com/photos/48439369@N00/2100913578">Tim Pierce</a></p>
 
 	</div>
+
+</div><!--div id content-->
 
 <TMPL_INCLUDE NAME="footer.tmpl">
