new wish list message

--- a/templates/welcome.tmpl
+++ b/templates/welcome.tmpl
@@ -15,7 +15,7 @@ $('document').ready(function() {
 <div id="main-left" class="tone-box" >
 
 <div class="alert-box" >
-<p>Please note that most libraries will not loan items that are considered too new.</p>
+<p>You can now add patron requests to your <a href="cgi-bin/myaccount.cgi?rm=myaccount_acquisitions_form">'wish list'</a></p>
 </div>
 
 	<h2>Quick Links</h2>
