removed dev test for registration

--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -131,8 +131,7 @@ $('document').ready(function(){
         <table id="fill-table">
           <tr>
         	  <th>Home library</th>
-        	  <td><p id="home_library"></p>
-            <p><TMPL_VAR name="library"></p></td>TMPL_VAR name="library"
+        	  <td><p id="home_library"></p></td>
         	</tr>
           <tr>
         	  <th>Your name</th>
