registration form tweak

--- a/templates/public/registration.tmpl
+++ b/templates/public/registration.tmpl
@@ -114,7 +114,8 @@ $('document').ready(function(){
       <div id="libraries" style="display:none; clear:both;">
       </div>
     <p> </p>
-
+</div>
+ <div id="main-info-right">
     <div id="registration" style="display:none; clear:both;">
       <br/>
       <h2>Registration form</h2>
