hide aside pre search

--- a/templates/public/search.tmpl
+++ b/templates/public/search.tmpl
@@ -259,7 +259,8 @@
 </main>
 
 <!--***************ARIA MARKER 'COMPLIMENTARY'***************-->
-<div id="aside" class="tone-box" role="complimentary">
+
+<div id="aside" class="tone-box" role="complimentary" style="display:none;">
   <div id="image"></div>
   <div id="stat"></div>
   <div id="leftcontent"></div>
