set secondary tab for wish lit page

--- a/templates/myaccount/acquisitions.tmpl
+++ b/templates/myaccount/acquisitions.tmpl
@@ -3,6 +3,11 @@
 
 <script type="text/javascript" src="/js/library-acquisitions-1.0.js"></script>
 
+<script type="text/javascript">
+  <!--
+  set_secondary_tab("menu_myaccount_acquisitions");
+  //-->
+</script>
 
 <script type="text/javascript">
 set_secondary_tab("menu_myaccount_acquisitions");
