--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -4,9 +4,13 @@
 <script type="text/javascript" src="/js/jquery.jeditable.js"></script>
 <script type="text/javascript" src="/js/library-barcodes-1.0.js"></script>
 
+<script type="text/javascript">
+  <!--
+  set_secondary_tab("menu_myaccount_library_barcodes");
+  //-->
+</script>
 
 <script type="text/javascript">
-set_secondary_tab("menu_myaccount_library_barcodes");
 
 $.ajaxSetup ({  
   cache: false  
