--- a/templates/logged_out.tmpl
+++ b/templates/logged_out.tmpl
@@ -15,7 +15,7 @@ $('document').ready(function(){
 });
 </script>
 
-
+<div id="content">
 	<h1>Logged out</h1>
 	<p>
 	<p style="display:none">Logged in as [<TMPL_VAR NAME="username">]</p>
@@ -25,5 +25,5 @@ $('document').ready(function(){
 	     <input TYPE="hidden" NAME="rm" VALUE="search_simple_ajax_form">
 	     <input type="submit" name="submit" value="Log in" class="library-style" />
 	</form>
-
+</div>
 <TMPL_INCLUDE NAME="footer.tmpl">
