--- a/templates/environment/display.tmpl
+++ b/templates/environment/display.tmpl
@@ -1,5 +1,21 @@
-<TMPL_INCLUDE NAME="header.tmpl">
-<style type="text/css">
+  <header role="banner">
+
+    <div id="header-left">
+      <div id="fill-logo"><a href="/"><img src="/img/fill-logo.png" alt="fill"></a></div>
+      <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
+    </div>
+
+    <div id="header-right">
+      </div>
+
+</header>
+
+<link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
+<link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css">
+<link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
+<link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"> 
+
+<!--<style type="text/css">
 
 #fill-table {
   border-collapse: collapse;
@@ -39,9 +55,10 @@
 }
 
 
-</style>
+</style>-->
+
 <!--dev test-->
-<div id="container">
+<div id="content">
 
   <table id="fill-table">
     <tr>
