env display dev test

--- a/templates/environment/display.tmpl
+++ b/templates/environment/display.tmpl
@@ -1,21 +1,6 @@
-  <header role="banner">
 
-    <div id="header-left">
-      <div id="fill-logo"><a href="/"><img src="/img/fill-logo.png" alt="fill"></a></div>
-      <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
-    </div>
 
-    <div id="header-right">
-      </div>
-
-</header>
-
-<link type="text/css" rel="stylesheet" href="/css/fILL-public-accessible.1.1.css">
-<link type="text/css" rel="stylesheet" href="/css/fILL-public-datatables.1.0.css">
-<link id="csstheme" type="text/css" rel="stylesheet" href="/css/themes-public-default.css">
-<link type"text/css" rel="stylesheet" href="/css/fILL-media.1.0.css"> 
-
-<!--<style type="text/css">
+<style type="text/css">
 
 #fill-table {
   border-collapse: collapse;
@@ -53,10 +38,7 @@
 #fill-table tr th:last-child {
   border-right: 0;
 }
-
-
-</style>-->
-
+</style>
 <!--dev test-->
 <div id="content">
 
